# bangertools

./: .gitignore  DEVELOP.md  README.md  convert.py  main.py  master_functions.py  pyproject.toml  requirements.txt
src/: tipsy.ipynb
src/bangertools/: __init__.py  convert.py  main.py  utilities.py  viz.py
src/bangertools/ahf/: app.py
src/bangertools/blackhole/: app.py  histogram.py  reports.py
src/bangertools/common/: color.py  util.py
src/bangertools/lib/: core.py  viewer.py
src/bangertools/reports/: app.py  blackhole.py  convert.py
src/bangertools/tmp/: build_core.py  core_viewer.py  render.py
src/bangertools/viz/: __init__.py  app.py  base_renderer.py  common.py  core_renderer.py  generic.py  generic_renderer.py  player.py
src/bangertools/viz/players/: __init__.py  collapse_player.py  collapse_tracer_player.py  dm_player.py  normal_player.py  player.py
