[project]
name = "bangertools"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pandas-stubs~=3.0.3",
    "pynbody>=2.4.2",
    "scipy>=1.17.1",
    "scipy-stubs~=1.17.1",
    "typer>=0.25.1",
    "vizpy>=2.4.0",
]

[tool.uv.build-backend]
module-root = "src"
packages = ["banger"]

[project.scripts]
banger = "bangertools.main:app"


[tool.uv]
link-mode = "copy"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"